vendor/tt-call/tests/ui/type-qpath-eof3.stderr
error: no rules expected the token `as`
 --> tests/ui/type-qpath-eof3.rs:5:19
  |
5 |     input = [{ <T as }]
  |                   ^^ no rules expected this token in macro call
  |
  = note: while trying to match end of macro
